# datahub

./: README.md  pyproject.toml  pyrightconfig.json  start_server_hub.bat
datahub/: db.sqlite3
datahub/core/: admin.py  models.py  views.py
datahub/core/migrations/: 0001_initial.py  0002_contato_demanda_descricao_demanda_observacao_and_more.py  0003_demanda_data_fechamento.py  0004_pendencia.py  0005_historicalpendencia.py  0006_historicaldemanda.py  0007_situacao_padrao.py  0008_situacao_pendente.py  0009_demanda_anexos_historicaldemanda_anexos.py  0010_documento_remove_demanda_anexos_and_more.py  0011_delete_documento_alter_anexodemanda_options_and_more.py  0012_alter_situacao_cor_hex_alter_situacao_padrao_and_more.py  0013_alter_anexodemanda_options_alter_demanda_descricao_and_more.py  0014_pendencia_resolvido_por.py  0015_alter_situacao_options_remove_demanda_nivel_and_more.py
datahub/core/templates/core/: dashboard.html  login_dashboard.html  pendencia_form.html
datahub/datahub/: asgi.py  settings.py  urls.py  wsgi.py
