[project]
name = "datahub"
version = "0.1.0"
description = "Gerenciador de demandas de time focado em dados"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-crum>=0.7.9",
    "django-jazzmin>=3.0.1",
    "django-simple-history>=3.11.0",
    "django-stubs>=5.2.8",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = []
